[package]
name = "vault-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
